# ASTInterpreter

./: ALR.txt  ARCHITECTURE_DESIGN.md  ASTInterpreter.cpp  ASTInterpreter.cpp.backup  ASTInterpreter.hpp  ASTInterpreter.js  ASTNodes.cpp  ASTNodes.hpp  ArduinoASTInterpreterConfig.cmake  ArduinoDataTypes.cpp  ArduinoDataTypes.hpp  ArduinoInterpreter.js  ArduinoLibraryRegistry.cpp  ArduinoLibraryRegistry.hpp  ArduinoParser.js  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  COMPACTAST_OPERATOR_LOADING_BUG.md  COMPACTAST_SERIALIZATION_FIX_PLAN.md  COMPREHENSIVE_FAILURE_ANALYSIS.md  CONTRIBUTING_AI.md  CPackConfig.cmake  CPackSourceConfig.cmake  CRITICAL_FILES_BACKUP.md  CROSS_PLATFORM_PARITY_REPORT.md  CROSS_PLATFORM_TESTING_METHODOLOGY.md  CTestTestfile.cmake  CommandProtocol.cpp  CommandProtocol.hpp  CompactAST.cpp  CompactAST_Format_Specification.md  DIAGNOSTIC_FINDINGS.md  EnhancedInterpreter.cpp  ExecutionTracer.hpp  FIXME.md  FLEXIBLE_COMMAND_BREAKTHROUGH.md  HYBRID.md  IMMEDIATE_ACTION_PLAN.md  INTERPRETER_ARCHITECTURE_PLAN.md  (+296 more)
.claude/: settings.local.json
.claude/agents/: architecture-reviewer.md  interpreter-specialist.md  parser-specialist.md  test-diagnostician.md
.github/: FUNDING.yml
agents/: subagent_integration.js
agents/analysis/: command_stream_analysis_agent.js  performance_history.json  performance_monitoring_agent.js
agents/core/: documentation_sync_agent.js  test_baseline.json  test_harness_agent.js  version_management_agent.js
agents/management/: interactive_strategy_agent.js  plan_manager_agent.js  project_manager_agent.js  task_manager_agent.js
cmake/: ArduinoASTInterpreterConfig.cmake.in
docs/: ARCHITECTURE_DESIGN.md  ARDUINOPARSER_ASSESSMENT_REPORT.md  COMPACTAST_ASSESSMENT_REPORT.md  COMPACTAST_SERIALIZATION_FIX_PLAN.md  COMPREHENSIVE_FAILURE_ANALYSIS.md  CONSOLE_LOG_AUDIT_REPORT.md  CONTRIBUTING_AI.md  CPP_ASSESSMENT_REPORT.md  CPP_BUILD_SYSTEM_HIERARCHY.md  CPP_INTERPRETER_FEATURE_ANALYSIS.md  CROSS_PLATFORM_OPTIMIZATION_REPORT.md  CompactAST_Format_Specification.md  DIAGNOSTIC_FINDINGS.md  EXECUTION_DIAGNOSTIC_PLAN.md  EXTERNAL_DATA_REQUEST_AUDIT.md  FILESYSTEM_REORGANIZATION_COMPLETE.md  HYBRID.md  IMMEDIATE_ACTION_PLAN.md  INTERPRETER_ARCHITECTURE_PLAN.md  JAVASCRIPT_ASSESSMENT_REPORT.md  NEWPLAN.md  SESSION_STATUS_SEPTEMBER_4_2025.md  TEST_DATA_GENERATION_REPORT.md  THEPLAN.md  THREE_PROJECT_ARCHITECTURE.md  TODO_DUAL_PLATFORM_PARITY.md  gemini-CLAUDE.md  preprocessor_fix_verification_report.md  qwen-CLAUDE.md  sfranzyshen_source_available_license.md
examples/: basic_interpreter.cpp
libs/ArduinoParser/: README.md  package.json
libs/CompactAST/: README.md  package.json
playgrounds/: interpreter_playground.html  parser_playground.html
src/cpp/: ASTInterpreter.cpp  ASTInterpreter.cpp.backup  ASTInterpreter.hpp  ASTNodes.cpp  ASTNodes.hpp  ArduinoDataTypes.cpp  ArduinoDataTypes.hpp  ArduinoLibraryRegistry.cpp  ArduinoLibraryRegistry.hpp  CommandProtocol.cpp  CommandProtocol.hpp  EnhancedInterpreter.cpp  EnhancedInterpreter.hpp  ExecutionTracer.cpp  ExecutionTracer.hpp  FlexibleCommand.hpp  debug_command_comparison.cpp  debug_simple_command_stream.cpp  quick_similarity_test.cpp  simple_trace_test.cpp  simple_validation_test.cpp  test_comprehensive_similarity.cpp  test_minimal_trace.cpp  test_simple_ast.cpp  test_state_machine.cpp  test_vardecl_cpp.cpp
src/javascript/: ASTInterpreter.js  ArduinoParser.js  (+5 more)
stuff/: arduino_examples.txt  examples_harness.html  index.html  interpreter.bak  interpreter.js.0.1.2  interpreter.js.0.1.4-old  interpreter.js.0.1.5-old  interpreter.js.0.1.6-old  manifest.json  new 44  new 48.txt  new 48q.txt  new 49.txt  newTest.html  newtoday.txt  patchfile  results.txt  script - Copy.js  script.js  style.css  test_harness.html  testfile.js
test_data/: cpp_analysis_debug.json  debug_comparison_detailed.json  debug_cpp_commands.txt  debug_js_commands.json  example_000.ast  example_000.commands  example_001.ast  example_001.commands  example_001_diagnostic.json  example_001_js_commands.txt  example_002.ast  example_002.commands  example_003.ast  example_003.commands  example_004.ast  example_004.commands  example_005.ast  example_005.commands  example_006.ast  example_006.commands  example_007.ast  example_007.commands  example_008.ast  example_008.commands  example_009.ast  example_009.commands  example_010.ast  example_010.commands  example_011.ast  example_011.commands  example_012.ast  example_012.commands  example_013.ast  example_013.commands  example_014.ast  example_014.commands  example_015.ast  example_015.commands  example_016.ast  example_016.commands  (+238 more)
testing_utilities/: test_arduinoisp_preprocessor.js  test_conditional_expressions.js
tests/: ASTInterpreter - Shortcut.lnk  extract_cpp_commands.cpp  test_ast_nodes.cpp  test_command_protocol.cpp  test_compact_ast.cpp  test_cross_platform_validation.cpp  test_interpreter_integration.cpp  test_utils.hpp
tools/: generate_clean_test_data.js  generate_test_data_fixed.js  validate_compactast_fix.js
trash/: AI_TESTBED_GUIDE.md  CURRENT_STATUS_SUMMARY.md  README_FOR_AI.md  SESSION_STATUS_SEPTEMBER_2_2025.md  accurate_cpp_diagnostic.js  analyze_ast.js  analyze_ast_node_differences.js  ast_node_analysis.json  comprehensive_cpp_diagnostic.js  comprehensive_interpreter_harness.html  comprehensive_test_harness.html  comprehensive_tests.js  debug_arduinoisp.js  debug_callmethod_args.js  debug_colormixing.js  debug_command_comparison.cpp  debug_command_stream.js  debug_constructor_args.js  debug_cpp_offsets.cpp  debug_external_functions.js  debug_failures.js  debug_final_failure.js  debug_generator_environment.js  debug_magic_number.cpp  debug_neopixel_circular.js  debug_performance.js  debug_playground_again.js  debug_playground_commands.js  debug_preprocessor.js  debug_simple_command_stream.cpp  debug_single_test.cpp  debug_undefined_display.js  debug_undefined_display_simple.js  debug_validation_test.cpp  debug_variable_names.js  diagnose_compatibility.js  examples.js  examples_harness.html  extracted_examples.js  extracted_examples_2.js  (+107 more)
(+758 files in other folders)
